Written a bit about week 7 + 8.

--- a/Reports/Final Report/Orientation.tex
+++ b/Reports/Final Report/Orientation.tex
@@ -214,7 +214,15 @@
       what we had up until that point. The coach and the customer(s) (Stephan
       could not be there, so he sent some of his colleagues to check in on
       how the project went) were impressed, but they also said that development
-      had to continue for the time being.
+      had to continue for the time being. At the end of week 7, the server was
+      completed, but now the true challenge began: integrating all the software
+      into one single product.
+      
+      Week 8 started with the integration of all the parts of the software.
+      From the start on, this proved quite challenging. Players could rotate
+      mirrors by rotating the markers (which shouldn't happen, as this would
+      kill off the co-operative element of the game), as well as other things.
+      As such, development on projection code was once again necessary.
       
       \subsection{The process table} \label{ssec:processtable}
       The following table gives a nice and short overview regarding what was done
@@ -227,17 +235,17 @@
 	      	      \hline
 	      	      Research & X & X & \space & \space & \space & \space & \space & \space & \space & \space \\
 	      	      \hline
-	      	      Final report & \space & \space & \space & X & X & X & X & \space & \space & \space \\
+	      	      Final report & \space & \space & \space & X & X & X & X & X & \space & \space \\
 	      	      \hline
 	      	      Networking & X & X & \space & \space & X & X & X & \space & \space & \space \\
 	      	      \hline
-	      	      Augmented reality & \space & \space & \space & X & X & X & X & \space & \space & \space \\
+	      	      Augmented reality & \space & \space & \space & X & X & X & X & X & \space & \space \\
 	      	      \hline
 	      	      Gameplay & X & X & X & X & \space & \space & \space & \space & \space & \space \\
 	      	      \hline
-	      	      Testing & \space & \space & X & X & X & X & X & \space & \space & \space \\
+	      	      Testing & \space & \space & X & X & X & X & X & X & \space & \space \\
 	      	      \hline
-	      	      Projection & \space & \space & \space & X & X & X & X & \space & \space & \space \\
+	      	      Projection & \space & \space & \space & X & X & X & X & X & \space & \space \\
 		      	  \hline
 	      \end{tabular}
       \end{table}
